--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             position: absolute;
             bottom: 0;
             width: 100%;
-            height: 200px;
+            /* 调整高度为相对单位，确保在不同屏幕下显示合理 */
+            height: 15vh; 
         }
 
         .building {
@@ -55,10 +56,10 @@
         /* 月亮样式 */
         #moon {
             position: absolute;
-            top: 50px;
-            right: 100px;
-            width: 80px;
-            height: 80px;
+            top: 5vh;
+            right: 5vw;
+            width: 8vw;
+            height: 8vw;
             border-radius: 50%;
             background-color: #FFFFCC;
             box-shadow: 0 0 20px #FFFFCC;
@@ -67,8 +68,8 @@
         /* 星星样式 */
         .star {
             position: absolute;
-            width: 2px;
-            height: 2px;
+            width: 0.2vw;
+            height: 0.2vw;
             background-color: #fff;
             border-radius: 50%;
             animation: twinkle 3s ease - in - out infinite;
@@ -83,6 +84,19 @@
                 opacity: 0.8;
             }
         }
+
+        /* 响应式调整，确保在小屏幕下显示正常 */
+        @media (max-width: 768px) {
+            #moon {
+                width: 12vw;
+                height: 12vw;
+            }
+
+            .star {
+                width: 0.4vw;
+                height: 0.4vw;
+            }
+        }
     </style>
 </head>
 
@@ -91,11 +105,11 @@
     <!-- 月亮 -->
     <div id="moon"></div>
     <!-- 星星 -->
-    <div class="star" style="top: 100px; left: 200px;"></div>
-    <div class="star" style="top: 200px; left: 400px;"></div>
-    <div class="star" style="top: 150px; left: 600px;"></div>
-    <div class="star" style="top: 250px; left: 800px;"></div>
-    <div class="star" style="top: 300px; left: 1000px;"></div>
+    <div class="star" style="top: 10vh; left: 20vw;"></div>
+    <div class="star" style="top: 20vh; left: 40vw;"></div>
+    <div class="star" style="top: 15vh; left: 60vw;"></div>
+    <div class="star" style="top: 25vh; left: 80vw;"></div>
+    <div class="star" style="top: 30vh; left: 10vw;"></div>
     <canvas id="canvas"></canvas>
     <script>
         const canvas = document.getElementById('canvas');
@@ -105,6 +119,8 @@
 
         const fireworks = [];
         const particles = [];
+        const fireworkPool = [];
+        const particlePool = [];
 
         function randomColor() {
             const hue = Math.floor(Math.random() * 360);
@@ -120,9 +136,11 @@
                 this.color = 'white';
                 this.trail = [];
                 this.trailLength = 10;
+                this.active = true;
             }
 
             update() {
+                if (!this.active) return;
                 this.trail.push({ x: this.x, y: this.y });
                 if (this.trail.length > this.trailLength) {
                     this.trail.shift();
@@ -130,12 +148,13 @@
                 this.y -= this.speed;
                 if (this.y <= this.targetY) {
                     this.explode();
-                    const index = fireworks.indexOf(this);
-                    fireworks.splice(index, 1);
+                    this.active = false;
+                    fireworkPool.push(this);
                 }
             }
 
             draw() {
+                if (!this.active) return;
                 ctx.beginPath();
                 ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
                 ctx.fillStyle = this.color;
@@ -157,13 +176,23 @@
                 const particleCount = Math.floor(Math.random() * 50) + 50;
                 const explosionType = Math.floor(Math.random() * 3);
                 for (let i = 0; i < particleCount; i++) {
-                    particles.push(new Particle(this.x, this.y, explosionType));
+                    let particle = particlePool.pop();
+                    if (!particle) {
+                        particle = new Particle(this.x, this.y, explosionType);
+                    } else {
+                        particle.reset(this.x, this.y, explosionType);
+                    }
+                    particles.push(particle);
                 }
             }
         }
 
         class Particle {
             constructor(x, y, explosionType) {
+                this.reset(x, y, explosionType);
+            }
+
+            reset(x, y, explosionType) {
                 this.x = x;
                 this.y = y;
                 this.size = Math.random() * 3 + 1;
@@ -173,6 +202,7 @@
                 this.alpha = 1;
                 this.fadeSpeed = 0.01;
                 this.gravity = 0.05;
+                this.active = true;
 
                 switch (explosionType) {
                     case 0:
@@ -199,17 +229,23 @@
             }
 
             update() {
+                if (!this.active) return;
                 this.x += this.speedX;
                 this.y += this.speedY;
                 this.speedY += this.gravity;
                 this.alpha -= this.fadeSpeed;
-                if (this.alpha <= 0) {
+                if (this.alpha <= 0 || this.y > canvas.height) {
+                    this.active = false;
+                    particlePool.push(this);
                     const index = particles.indexOf(this);
-                    particles.splice(index, 1);
+                    if (index!== -1) {
+                        particles.splice(index, 1);
+                    }
                 }
             }
 
             draw() {
+                if (!this.active) return;
                 ctx.globalAlpha = this.alpha;
                 ctx.beginPath();
                 ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
@@ -225,15 +261,25 @@
             ctx.fillStyle = 'rgba(0, 0, 0, 0.1)';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-            fireworks.forEach(firework => {
-                firework.update();
-                firework.draw();
-            });
+            for (let i = fireworks.length - 1; i >= 0; i--) {
+                const firework = fireworks[i];
+                if (firework.active) {
+                    firework.update();
+                    firework.draw();
+                } else {
+                    fireworks.splice(i, 1);
+                }
+            }
 
-            particles.forEach(particle => {
-                particle.update();
-                particle.draw();
-            });
+            for (let i = particles.length - 1; i >= 0; i--) {
+                const particle = particles[i];
+                if (particle.active) {
+                    particle.update();
+                    particle.draw();
+                } else {
+                    particles.splice(i, 1);
+                }
+            }
 
             requestAnimationFrame(animate);
         }
@@ -242,35 +288,39 @@
             const x = e.clientX;
             const y = canvas.height;
             const targetY = Math.random() * canvas.height * 0.5;
-            fireworks.push(new Firework(x, y, targetY));
+            let firework = fireworkPool.pop();
+            if (!firework) {
+                firework = new Firework(x, y, targetY);
+            } else {
+                firework.x = x;
+                firework.y = y;
+                firework.targetY = targetY;
+                firework.speed = Math.random() * 3 + 2;
+                firework.color = 'white';
+                firework.trail = [];
+                firework.active = true;
+            }
+            fireworks.push(firework);
         });
 
         function createCity() {
             const city = document.getElementById('city');
             const numBuildings = Math.floor(window.innerWidth / 50);
+            let cityHTML = '';
             for (let i = 0; i < numBuildings; i++) {
-                const building = document.createElement('div');
                 const width = Math.random() * 30 + 20;
-                const height = Math.random() * 150 + 50;
-                building.style.width = `${width}px`;
-                building.style.height = `${height}px`;
-                building.style.left = `${i * 50}px`;
-                building.classList.add('building');
-                city.appendChild(building);
-
+                const height = Math.random() * (15 * (window.innerHeight / 100)) + 10;
+                let buildingHTML = `<div class="building" style="width: ${width}px; height: ${height}px; left: ${i * 50}px;">`;
                 const numLights = Math.floor(height / 20);
                 for (let j = 0; j < numLights; j++) {
-                    const light = document.createElement('div');
                     const lightWidth = 5;
                     const lightHeight = 8;
-                    light.style.width = `${lightWidth}px`;
-                    light.style.height = `${lightHeight}px`;
-                    light.style.left = `${Math.random() * (width - lightWidth)}px`;
-                    light.style.bottom = `${j * 20 + 10}px`;
-                    light.classList.add('light');
-                    building.appendChild(light);
+                    buildingHTML += `<div class="light" style="width: ${lightWidth}px; height: ${lightHeight}px; left: ${Math.random() * (width - lightWidth)}px; bottom: ${j * 20 + 10}px;"></div>`;
                 }
+                buildingHTML += '</div>';
+                cityHTML += buildingHTML;
             }
+            city.innerHTML = cityHTML;
         }
 
         createCity();
